<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_page"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainpage.MainPage">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:contentDescription="TiManager Logo"
            android:src="@drawable/timanager_logo" />

        <Button
            android:id="@+id/button_mt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mt_title" />

        <Button
            android:id="@+id/button_ct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ct_title" />

        <Button
            android:id="@+id/button_ae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_event" />

        <Button
            android:id="@+id/button_ex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/program_exit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>